--- a/site/newDellGen10/profiles/host/cp_r740.yaml
+++ b/site/newDellGen10/profiles/host/cp_r740.yaml
@@ -70,7 +70,7 @@ data:
         labels:
           bootdrive: 'true'
         partitions:
-          - name: ''
+          - name: 'root'
             size: '25g'
             filesystem:
               mountpoint: '/'
