--- a/site/newair/site-definition.yaml
+++ b/site/newair/site-definition.yaml
@@ -7,7 +7,7 @@ metadata:
     abstract: false
     layer: site
   # NEWSITE-CHANGEME: Replace with the site name
-  name: newair
+  name: newak
   storagePolicy: cleartext
 data:
   # The type layer this site will delpoy with. Type layer is found in the
