--- a/site/newak/networks/physical/networks.yaml
+++ b/site/newak/networks/physical/networks.yaml
@@ -100,7 +100,7 @@ data:
     start: 172.30.14.200
     end: 172.30.14.211
   dns:
-    domain: lab.akraino.org
+    domain: newak.lab.akraino.org
     servers: '172.28.9.74 172.28.9.75 8.8.8.8'
 ...
 ---
@@ -154,7 +154,7 @@ data:
     start: 172.28.14.100
     end: 172.28.14.111
   dns:
-    domain: .lab.akraino.org
+    domain: newak.lab.akraino.org
     servers: '172.28.9.74 172.28.9.75 8.8.8.8'
 ...
 ---
