--- a/site/newak/profiles/host/dp_r740.yaml
+++ b/site/newak/profiles/host/dp_r740.yaml
@@ -1,7 +1,8 @@
 ---
-# The data plane host profile for Airship for DELL R720s, and should
-# not need to be altered if you are using matching HW. The host profile is setup
-# for cpu isolation (for nova pinning), hugepages, and sr-iov.
+# The primary control plane host profile for Airship for DELL R720s, and
+# should not need to be altered if you are using matching HW. The active
+# participants in the Ceph cluster run on this profile. Other control plane
+# services are not affected by primary vs secondary designation.
 schema: drydock/HostProfile/v1
 metadata:
   schema: metadata/Document/v1
@@ -10,15 +11,6 @@ metadata:
   layeringDefinition:
     abstract: false
     layer: site
-#    parentSelector:
-#      hosttype: dp-global
-#    actions:
-#      - method: replace
-#        path: .interfaces
-#      - method: replace
-#        path: .storage
-#      - method: merge
-#       path: .
   substitutions:
     - dest:
         path: .oob.credential
@@ -26,6 +18,15 @@ metadata:
         schema: deckhand/Passphrase/v1
         name: ipmi_admin_password
         path: .
+#    parentSelector:
+#      hosttype: cp-global
+#    actions:
+#      - method: replace
+#        path: .interfaces
+#      - method: replace
+#        path: .storage
+#      - method: merge
+#        path: .
 data:
   oob:
     type: 'ipmi'
@@ -62,6 +63,7 @@ data:
       sriov:
         vf_count: 32 # Currently ignored
         trustedmode: false
+
   storage:
     physical_devices:
       sdh:
