--- a/site/newak/baremetal/nodes.yaml
+++ b/site/newak/baremetal/nodes.yaml
@@ -175,7 +175,7 @@ data:
       address: 172.29.14.108
   # NEWSITE-CHANGEME: The next node's host profile
   # This is the third "primary" control plane profile after genesis
-  host_profile: cp_r740-primary
+  host_profile: dp_r740
   metadata:
     # NEWSITE-CHANGEME: The next node's rack designation
     rack: RACK01
