--- a/site/newak/networks/common-addresses.yaml
+++ b/site/newak/networks/common-addresses.yaml
@@ -37,8 +37,8 @@ data:
           - 172.29.14.3
   dns:
     # Kubernetes cluster domain. Do not change. This is internal to the cluster.
-    cluster_domain: newak.lab.akraino.org
-   # node_domain: cluster.local
+    #cluster_domain: newak.lab.akraino.org
+    cluster_domain: cluster.local
     # DNS service ip
     service_ip: 10.96.0.10
     # List of upstream DNS forwards. Verify you can reach them from your
@@ -113,6 +113,8 @@ data:
     drydock_api: 30000
     maas_api: 30001
     maas_proxy: 31800  # hardcoded in MAAS
+    shipyard_api: 30003
+    airflow_web: 30004
 
   ntp:
     # comma separated NTP server list. Verify that these upstream NTP servers are
