--- a/site/newak/software/charts/osh/openstack-compute-kit/neutron.yaml
+++ b/site/newak/software/charts/osh/openstack-compute-kit/neutron.yaml
@@ -1,11 +1,15 @@
 ---
+# This file defines hardware-specific settings for neutron. If you use the same
+# hardware profile as this environment, you should not need to change this file.
+# Otherwise, you should review the settings here and adjust for your hardware.
+# In particular:
+# 1. logical network interface names
+# 2. physical device mappigns
+# TODO: Should move to global layer and become tied to the hardware profile
 schema: armada/Chart/v1
 metadata:
   schema: metadata/Document/v1
-  name: neutron
-  replacement: true
-  labels:
-    component: neutron
+  name: neutron-fixme
   layeringDefinition:
     abstract: false
     layer: site
@@ -15,39 +19,5 @@ metadata:
       - method: merge
         path: .
   storagePolicy: cleartext
-data:
-  values:
-    labels:
-      agent:
-        sriov:
-          node_selector_key: sriov
-          node_selector_value: enabled
-    network:
-      backend:
-        - openvswitch
-        - sriov
-      interface:
-        sriov:
-          - device: enp135s0f0
-            num_vfs: 32
-            promisc: false
-          - device: enp135s0f1
-            num_vfs: 32
-            promisc: false
-    conf:
-      plugins:
-        openvswitch_agent:
-          ovs:
-            bridge_mappings: bond0:br-bond0
-        sriov_agent:
-          securitygroup:
-            firewall_driver: neutron.agent.firewall.NoopFirewallDriver
-          sriov_nic:
-            exclude_devices: null
-            physical_device_mappings: 'sriovnet1:enp135s0f0,sriovnet2:enp135s0f1'
-        ml2_conf:
-          ml2:
-            mechanism_drivers: l2population,openvswitch,sriovnicswitch
-          ml2_type_vlan:
-            network_vlan_ranges: bond0:46:300,sriovnet1:2001:3000,sriovnet2:2001:3000
+data: {}
 ...
