--- a/global/software/config/versions.yaml
+++ b/global/software/config/versions.yaml
@@ -461,12 +461,15 @@ data:
     kubelet: https://dl.k8s.io/v1.11.6/kubernetes-node-linux-amd64.tar.gz
   images:
     calico:
-     # calico: {}
-      calico_node: quay.io/calico/node:v3.4.1
-      calico_cni: quay.io/calico/cni:v3.4.1
-      calico_ctl: calico/ctl:v3.4.1
-      calico_settings: calico/ctl:v3.4.1
-      etcd: {}
+      etcd: 
+        etcd: {}
+      #  etcd: quay.io/coreos/etcd:v3.2.14
+      #  etcdctl: quay.io/coreos/etcd:v3.2.14
+      calico:
+        calico_node: quay.io/calico/node:v3.4.1
+        calico_cni: quay.io/calico/cni:v3.4.1
+        calico_ctl: calico/ctl:v3.4.1
+        calico_settings: calico/ctl:v3.4.1
     ceph:
       ceph-client: {}
       ceph-mon: {}
