--- a/global/software/config/versions.yaml
+++ b/global/software/config/versions.yaml
@@ -14,13 +14,17 @@ data:
         type: git
       calico:
         calico:
-          location: https://git.openstack.org/openstack/openstack-helm-infra
-          reference: 7387ecd71c46ecbc000ab431b5e16387d3ba1e04
+          #location: https://git.openstack.org/openstack/openstack-helm-infra
+          #reference: 7387ecd71c46ecbc000ab431b5e16387d3ba1e04
+          location: https://gith/cb371j/osh-infra
+          reference: c87a940c52ed7e5a61d6fec72fef07f3e096df30
           subpath: calico
           type: git
         calico-htk:
-          location: https://git.openstack.org/openstack/openstack-helm-infra
-          reference: 7387ecd71c46ecbc000ab431b5e16387d3ba1e04
+          #location: https://git.openstack.org/openstack/openstack-helm-infra
+          #reference: 7387ecd71c46ecbc000ab431b5e16387d3ba1e04
+          location: https://git/cb371j/osh-infra
+          reference: c87a940c52ed7e5a61d6fec72fef07f3e096df30
           subpath: helm-toolkit
           type: git
         etcd:
@@ -461,15 +465,8 @@ data:
     kubelet: https://dl.k8s.io/v1.11.6/kubernetes-node-linux-amd64.tar.gz
   images:
     calico:
-      etcd: 
-        etcd: {}
-      #  etcd: quay.io/coreos/etcd:v3.2.14
-      #  etcdctl: quay.io/coreos/etcd:v3.2.14
-      calico:
-        calico_node: quay.io/calico/node:v3.4.1
-        calico_cni: quay.io/calico/cni:v3.4.1
-        calico_ctl: calico/ctl:v3.4.1
-        calico_settings: calico/ctl:v3.4.1
+      calico: {}
+      etcd: {}
     ceph:
       ceph-client: {}
       ceph-mon: {}
