--- a/global/software/config/versions.yaml
+++ b/global/software/config/versions.yaml
@@ -16,7 +16,7 @@ data:
         calico:
           #location: https://git.openstack.org/openstack/openstack-helm-infra
           #reference: 7387ecd71c46ecbc000ab431b5e16387d3ba1e04
-          location: https://gith/cb371j/osh-infra
+          location: https://git/cb371j/osh-infra
           reference: c87a940c52ed7e5a61d6fec72fef07f3e096df30
           subpath: calico
           type: git
