--- a/site/newak/networks/common-addresses.yaml
+++ b/site/newak/networks/common-addresses.yaml
@@ -157,11 +157,11 @@ data:
     # bond which the overlay is a member of. Ensure the bond name is consistent
     # with the bond assigned to the overlay network in
     # networks/physical/networks.yaml
-    external_iface: 'bond0'
+    external_iface: 'br-bond0'
 
   openvswitch:
     # bond which the overlay is a member of. Ensure the bond name is consistent
     # with the bond assigned to the overlay network in
     # networks/physical/networks.yaml
-    external_iface: 'bond0'
+    external_iface: 'br-bond0'
 ...
