--- a/site/akaz2/profiles/host/cp_r740.yaml
+++ b/site/akaz2/profiles/host/cp_r740.yaml
@@ -46,6 +46,9 @@ data:
       slaves:
         - 'enp95s0f0'
         - 'enp95s0f1'
+        - 'enp94s0f0'
+        - 'enp94s0f1'
+
       networks:
         - 'oam'
         - 'storage'
