--- a/site/newak/software/charts/osh/openstack-tenant-ceph/ceph-osd.yaml
+++ b/site/newak/software/charts/osh/openstack-tenant-ceph/ceph-osd.yaml
@@ -33,11 +33,11 @@ data:
               location: /dev/sde
             journal:
               type: block-logical
-              location: /dev/sdg
+              location: /dev/sdb
           - data:
               type: block-logical
               location: /dev/sdf
             journal:
               type: block-logical
-              location: /dev/sdg
+              location: /dev/sdb
 ...
