--- a/site/newak/profiles/genesis.yaml
+++ b/site/newak/profiles/genesis.yaml
@@ -44,5 +44,7 @@ data:
       - openstack-control-plane=enabled
       - openvswitch=enabled
       - openstack-l3-agent=enabled
+      - fluentd=enabled
+      - fluentbit=enabled
       - node-exporter=enabled
 ...
