--- a/site/newak/profiles/host/cp_r740.yaml
+++ b/site/newak/profiles/host/cp_r740.yaml
@@ -66,7 +66,7 @@ data:
 
   storage:
     physical_devices:
-      sdh:
+      sdg:
         labels:
           bootdrive: 'true'
         partitions:
@@ -86,6 +86,14 @@ data:
             size: '300g'
             filesystem:
               mountpoint: '/var'
+              fstype: 'ext4'
+              mount_options: 'defaults'
+      sdh:
+        partitions:
+          - name: 'nova'
+            size: '99%'
+            filesystem:
+              mountpoint: '/var/lib/nova'
               fstype: 'ext4'
               mount_options: 'defaults'
   platform:
